@@ -195,3 +195,4 @@ v 2.0:
 	- Fix GlobalGroups not loading permission nodes.
 	- Fix an error with Logging set to 'OFF' triggering a cast exception.
 	- No more null errors from corrupt config.yml's.
+	- Give a better error when a subgroup is null.
